[gd_scene load_steps=4 format=2]

[ext_resource path="res://models/puzzle/trigger_zone.gd" type="Script" id=1]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.530946, 0.590801, 0.990111 )

[node name="TriggerZone" type="Area"]
collision_layer = 4
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
visible = false
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="Spatial" type="Spatial" parent="."]
[connection signal="area_entered" from="." to="." method="_on_TriggerZone_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_TriggerZone_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_TriggerZone_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_TriggerZone_body_exited"]
